# unicorn

./: README.md  a.py  b.py
src/: app.rs  event.rs
src/git/: commit.rs  mod.rs  repository.rs
src/ui/: branches.rs  mod.rs  statusbar.rs
unicorn/: Cargo.toml
unicorn/src/: main.rs
unicorn/src/ui/: commit_log.rs  theme.rs
